--- a/T3kCfg/Languages/arabic.txt
+++ b/T3kCfg/Languages/arabic.txt
@@ -126,7 +126,7 @@ TEXT_PROFILE_ITEM_MMIDDLE_DOWN = الزر الأوسط
 [CALIBRATION SETTING]
 TITLE_CAPTION_CALIBRATION = تصحيح  التنسيق اللمس
 TEXT_SCREEN_MARGIN = هوامش الشاشة
-TEXT_SCREEN_PERCENT_OF_SCREEN = " من الشاشة %
+TEXT_SCREEN_PERCENT_OF_SCREEN = من الشاشة %
 TEXT_CALIBRATE = تصحيح
 BTN_CAPTION_CALIBRATE = تصحيح
 
