--- a/T3kCfg/Languages/chinese.txt
+++ b/T3kCfg/Languages/chinese.txt
@@ -61,7 +61,7 @@ BTN_CAPTION_SOFTKEY_SETTING_SUB2 =
 
 [MOUSE SETTING]
 TITLE_CAPTION_MOUSE_BUTTON_MAPPING = 觸摸手勢
-BTN_CAPTION_TOUCH_SETTING = 觸摸設置...                                            
+BTN_CAPTION_TOUCH_SETTING = 觸摸設置...
 
 ;TEXT_SINGLE = 單指
 ;TEXT_FINGERS = 多指
@@ -128,7 +128,7 @@ TITLE_CAPTION_CALIBRATION = 校準
 TEXT_SCREEN_MARGIN = 屏幕邊緣
 TEXT_SCREEN_PERCENT_OF_SCREEN = %
 TEXT_CALIBRATE = 校正
-BTN_CAPTION_CALIBRATE = 校正…                                                        
+BTN_CAPTION_CALIBRATE = 校正...
 
 TITLE_AREA_SETTING = 区域设置（%）
 TEXT_SINGLE_CLICK = 
@@ -138,6 +138,17 @@ TEXT_PALM = 手掌
 
 TEXT_CALIBRATION_WARNING = “Mac OS X的边缘 ”在“手势”菜单里没有设置成功。 校正无法正常工作。
 TEXT_CALIBRATION_WARNING2 = “Mac OS X的边缘 ”在“手势”菜单里设置成功。 校正无法正常工作。
+
+BTN_ADVANCED = 先進...
+
+[ADVANCED]
+WINDOW_CAPTION = 先進
+TITLE_CAPTION_ADJUSTMENT = 調整
+TEXT_CHECKBOX_BENT = 
+TEXT_CHECKBOX_DETECTION = 檢測範圍
+TEXT_PASSWORD = 密碼
+BTN_START = 開始
+MSG_INCORRECT_PASSWORD = 
 
 [SETTING]
 TITLE_CAPTION_TOUCH_ENABLE = 打开/关闭触摸屏
