--- a/T3kCfg/Languages/chineseSimplified.txt
+++ b/T3kCfg/Languages/chineseSimplified.txt
@@ -128,7 +128,7 @@ TITLE_CAPTION_CALIBRATION = 校准
 TEXT_SCREEN_MARGIN = 屏幕边缘
 TEXT_SCREEN_PERCENT_OF_SCREEN = %
 TEXT_CALIBRATE = 校正
-BTN_CAPTION_CALIBRATE = 校正…                                                      
+BTN_CAPTION_CALIBRATE = 校正...
 
 TITLE_AREA_SETTING = 区域设置（%）
 TEXT_SINGLE_CLICK = 单击
@@ -138,6 +138,17 @@ TEXT_PALM = 手掌
 
 TEXT_CALIBRATION_WARNING = “Mac OS X的边缘 ”在“手势”菜单里没有设置成功。 校正无法正常工作。
 TEXT_CALIBRATION_WARNING2 = “Mac OS X的边缘 ”在“手势”菜单里设置成功。 校正无法正常工作。
+
+BTN_ADVANCED = 先进...
+
+[ADVANCED]
+WINDOW_CAPTION = 先进
+TITLE_CAPTION_ADJUSTMENT = 调整
+TEXT_CHECKBOX_BENT = 
+TEXT_CHECKBOX_DETECTION = 檢測範圍
+TEXT_PASSWORD = 密码
+BTN_START = 开始
+MSG_INCORRECT_PASSWORD = 
 
 [SETTING]
 TITLE_CAPTION_TOUCH_ENABLE = 打开/关闭触摸屏
