--- a/T3kCfg/Languages/portuguese.txt
+++ b/T3kCfg/Languages/portuguese.txt
@@ -128,7 +128,7 @@ TITLE_CAPTION_CALIBRATION = Calibração
 TEXT_SCREEN_MARGIN = Margem de tela
 TEXT_SCREEN_PERCENT_OF_SCREEN = % da tela
 TEXT_CALIBRATE = Calibrar
-BTN_CAPTION_CALIBRATE = Calibração…
+BTN_CAPTION_CALIBRATE = Calibração...
 
 TITLE_AREA_SETTING = Configurações da área(%)
 TEXT_SINGLE_CLICK = Único clique
@@ -138,6 +138,17 @@ TEXT_PALM = Palma da mão
 
 TEXT_CALIBRATION_WARNING = Didn't check 'Mac OS X Margin' in 'Gesture' menu. Because the calibration may not work properly.
 TEXT_CALIBRATION_WARNING2 = Did check 'Mac OS X Margin' in 'Gesture' menu. Because the calibration may not work properly.
+
+BTN_ADVANCED = Avançado...
+
+[ADVANCED]
+WINDOW_CAPTION = Avançado
+TITLE_CAPTION_ADJUSTMENT = Ajuste
+TEXT_CHECKBOX_BENT = 
+TEXT_CHECKBOX_DETECTION = Faixa de detecção
+TEXT_PASSWORD = Senha
+BTN_START = Começar
+MSG_INCORRECT_PASSWORD = 
 
 [SETTING]
 TITLE_CAPTION_TOUCH_ENABLE = Ativar / desativar o toque
