--- a/T3kCfg/Languages/arabic.txt
+++ b/T3kCfg/Languages/arabic.txt
@@ -144,11 +144,11 @@ BTN_ADVANCED = متقدم ...
 [ADVANCED]
 WINDOW_CAPTION = متقدم
 TITLE_CAPTION_ADJUSTMENT = تعديل
-TEXT_CHECKBOX_BENT = 
+TEXT_CHECKBOX_BENT = متقوس
 TEXT_CHECKBOX_DETECTION = نطاق الكشف
-TEXT_PASSWORD = كلمة السر
+TEXT_ID = 
 BTN_START = بداية
-MSG_INCORRECT_PASSWORD = 
+MSG_INCORRECT_ID = 
 
 [SETTING]
 TITLE_CAPTION_TOUCH_ENABLE = وجود الاستخدام اللمس
