--- a/T3kCfg/Languages/chinese.txt
+++ b/T3kCfg/Languages/chinese.txt
@@ -144,11 +144,11 @@ BTN_ADVANCED = 先進...
 [ADVANCED]
 WINDOW_CAPTION = 先進
 TITLE_CAPTION_ADJUSTMENT = 調整
-TEXT_CHECKBOX_BENT = 
+TEXT_CHECKBOX_BENT = 彎曲
 TEXT_CHECKBOX_DETECTION = 檢測範圍
-TEXT_PASSWORD = 密碼
+TEXT_ID = 
 BTN_START = 開始
-MSG_INCORRECT_PASSWORD = 
+MSG_INCORRECT_ID = 
 
 [SETTING]
 TITLE_CAPTION_TOUCH_ENABLE = 打开/关闭触摸屏
