--- a/T3kCfg/Languages/chineseSimplified.txt
+++ b/T3kCfg/Languages/chineseSimplified.txt
@@ -144,11 +144,11 @@ BTN_ADVANCED = 先进...
 [ADVANCED]
 WINDOW_CAPTION = 先进
 TITLE_CAPTION_ADJUSTMENT = 调整
-TEXT_CHECKBOX_BENT = 
+TEXT_CHECKBOX_BENT = 弯曲
 TEXT_CHECKBOX_DETECTION = 檢測範圍
-TEXT_PASSWORD = 密码
+TEXT_ID = 
 BTN_START = 开始
-MSG_INCORRECT_PASSWORD = 
+MSG_INCORRECT_ID = 
 
 [SETTING]
 TITLE_CAPTION_TOUCH_ENABLE = 打开/关闭触摸屏
