--- a/T3kCfg/Languages/czech.txt
+++ b/T3kCfg/Languages/czech.txt
@@ -144,11 +144,11 @@ BTN_ADVANCED = Pokročilý...
 [ADVANCED]
 WINDOW_CAPTION = Pokročilý
 TITLE_CAPTION_ADJUSTMENT = Nastavení
-TEXT_CHECKBOX_BENT = 
+TEXT_CHECKBOX_BENT = Ohnutý
 TEXT_CHECKBOX_DETECTION = Rozsah detekce
-TEXT_PASSWORD = Heslo
+TEXT_ID = 
 BTN_START = Začátek
-MSG_INCORRECT_PASSWORD = 
+MSG_INCORRECT_ID = 
 
 [SETTING]
 TITLE_CAPTION_TOUCH_ENABLE = Zapnout / vypnout dotykové ovládání
