--- a/T3kCfg/Languages/dutch.txt
+++ b/T3kCfg/Languages/dutch.txt
@@ -144,11 +144,11 @@ BTN_ADVANCED = Vergevorderd...
 [ADVANCED]
 WINDOW_CAPTION = Vergevorderd
 TITLE_CAPTION_ADJUSTMENT = Aanpassing
-TEXT_CHECKBOX_BENT = 
+TEXT_CHECKBOX_BENT = Gebogen
 TEXT_CHECKBOX_DETECTION = Detectiebereik
-TEXT_PASSWORD = Wachtwoord
+TEXT_ID = 
 BTN_START = Starten
-MSG_INCORRECT_PASSWORD = 
+MSG_INCORRECT_ID = 
 
 [SETTING]
 TITLE_CAPTION_TOUCH_ENABLE = Touch aan/uit
