--- a/T3kCfg/Languages/french.txt
+++ b/T3kCfg/Languages/french.txt
@@ -144,11 +144,11 @@ BTN_ADVANCED = Avancé...
 [ADVANCED]
 WINDOW_CAPTION = Avancé
 TITLE_CAPTION_ADJUSTMENT = Réglage
-TEXT_CHECKBOX_BENT = 
+TEXT_CHECKBOX_BENT = Bent
 TEXT_CHECKBOX_DETECTION = Plage de détection
-TEXT_PASSWORD = Mot de passe
+TEXT_ID = 
 BTN_START = Commencer
-MSG_INCORRECT_PASSWORD = 
+MSG_INCORRECT_ID = 
 
 [SETTING]
 TITLE_CAPTION_TOUCH_ENABLE = Activer/Désactiver l'écran tactile
