--- a/T3kCfg/Languages/japanese.txt
+++ b/T3kCfg/Languages/japanese.txt
@@ -144,11 +144,11 @@ BTN_ADVANCED = 高度な...
 [ADVANCED]
 WINDOW_CAPTION = 高度な
 TITLE_CAPTION_ADJUSTMENT = 調整
-TEXT_CHECKBOX_BENT = 
+TEXT_CHECKBOX_BENT = 曲がった
 TEXT_CHECKBOX_DETECTION = 検出範囲
-TEXT_PASSWORD = パスワード
+TEXT_ID = 
 BTN_START = 開始
-MSG_INCORRECT_PASSWORD = 
+MSG_INCORRECT_ID = 
 
 [SETTING]
 TITLE_CAPTION_TOUCH_ENABLE = タッチ使用の有無
