--- a/T3kCfg/Languages/korean.txt
+++ b/T3kCfg/Languages/korean.txt
@@ -146,9 +146,9 @@ WINDOW_CAPTION = 고급
 TITLE_CAPTION_ADJUSTMENT = 조정
 TEXT_CHECKBOX_BENT = 벤트
 TEXT_CHECKBOX_DETECTION = 검출영역
-TEXT_PASSWORD = 암호
+TEXT_ID = 
 BTN_START = 시작
-MSG_INCORRECT_PASSWORD = 
+MSG_INCORRECT_ID = 
 
 [SETTING]
 TITLE_CAPTION_TOUCH_ENABLE = 터치 사용 유무
