--- a/T3kCfg/Languages/portuguese.txt
+++ b/T3kCfg/Languages/portuguese.txt
@@ -144,11 +144,11 @@ BTN_ADVANCED = Avançado...
 [ADVANCED]
 WINDOW_CAPTION = Avançado
 TITLE_CAPTION_ADJUSTMENT = Ajuste
-TEXT_CHECKBOX_BENT = 
+TEXT_CHECKBOX_BENT = Curvo
 TEXT_CHECKBOX_DETECTION = Faixa de detecção
-TEXT_PASSWORD = Senha
+TEXT_ID = 
 BTN_START = Começar
-MSG_INCORRECT_PASSWORD = 
+MSG_INCORRECT_ID = 
 
 [SETTING]
 TITLE_CAPTION_TOUCH_ENABLE = Ativar / desativar o toque
