--- a/T3kCfg/Languages/spanish.txt
+++ b/T3kCfg/Languages/spanish.txt
@@ -144,11 +144,11 @@ BTN_ADVANCED = Avanzado...
 [ADVANCED]
 WINDOW_CAPTION = Avanzado
 TITLE_CAPTION_ADJUSTMENT = Ajuste
-TEXT_CHECKBOX_BENT = 
+TEXT_CHECKBOX_BENT = Curva
 TEXT_CHECKBOX_DETECTION = Rango de detección
-TEXT_PASSWORD = Contraseña
+TEXT_ID = 
 BTN_START = Iniciar
-MSG_INCORRECT_PASSWORD = 
+MSG_INCORRECT_ID = 
 
 [SETTING]
 TITLE_CAPTION_TOUCH_ENABLE = Táctil o no táctil
