--- a/T3kCfg/Languages/turkish.txt
+++ b/T3kCfg/Languages/turkish.txt
@@ -144,11 +144,11 @@ BTN_ADVANCED = Gelişmiş...
 [ADVANCED]
 WINDOW_CAPTION = Gelişmiş
 TITLE_CAPTION_ADJUSTMENT = Ayarlama
-TEXT_CHECKBOX_BENT = 
+TEXT_CHECKBOX_BENT = Aklına koymuş
 TEXT_CHECKBOX_DETECTION = Algılama aralığı
-TEXT_PASSWORD = Parola
+TEXT_ID = 
 BTN_START = Başlangıç
-MSG_INCORRECT_PASSWORD = 
+MSG_INCORRECT_ID = 
 
 [SETTING]
 TITLE_CAPTION_TOUCH_ENABLE = Dokunmatik Ekran Aç/Kapa
