--- a/T3kCfg/Languages/vietnamese.txt
+++ b/T3kCfg/Languages/vietnamese.txt
@@ -144,11 +144,11 @@ BTN_ADVANCED = Tiên tiến...
 [ADVANCED]
 WINDOW_CAPTION = Tiên tiến
 TITLE_CAPTION_ADJUSTMENT = Điều chỉnh
-TEXT_CHECKBOX_BENT = 
+TEXT_CHECKBOX_BENT = Uốn cong
 TEXT_CHECKBOX_DETECTION = Phạm vi phát hiện
-TEXT_PASSWORD = Mật khẩu
+TEXT_ID = 
 BTN_START = Bắt đầu
-MSG_INCORRECT_PASSWORD = 
+MSG_INCORRECT_ID = 
 
 [SETTING]
 TITLE_CAPTION_TOUCH_ENABLE = Bật/tắt màn hình cảm ứng
