--- a/T3kCfg/Languages/russian.txt
+++ b/T3kCfg/Languages/russian.txt
@@ -144,11 +144,11 @@ BTN_ADVANCED = Передовой...
 [ADVANCED]
 WINDOW_CAPTION = Передовой
 TITLE_CAPTION_ADJUSTMENT = Pегулировка
-TEXT_CHECKBOX_BENT = 
+TEXT_CHECKBOX_BENT = Изогнутый
 TEXT_CHECKBOX_DETECTION = Дальность обнаружения
-TEXT_PASSWORD = Пароль
+TEXT_ID = 
 BTN_START = начало
-MSG_INCORRECT_PASSWORD = 
+MSG_INCORRECT_ID = 
 
 [SETTING]
 TITLE_CAPTION_TOUCH_ENABLE = Включить/выключить сенсорный экран
