--- a/T3kCfg/Languages/chinese.txt
+++ b/T3kCfg/Languages/chinese.txt
@@ -149,6 +149,7 @@ TEXT_CHECKBOX_DETECTION = 檢測範圍
 TEXT_ID = 
 BTN_START = 開始
 MSG_INCORRECT_ID = 
+MSG_ESCAPE = 按ESC鍵退出。
 
 [SETTING]
 TITLE_CAPTION_TOUCH_ENABLE = 打开/关闭触摸屏
