--- a/T3kCfg/Languages/japanese.txt
+++ b/T3kCfg/Languages/japanese.txt
@@ -149,6 +149,7 @@ TEXT_CHECKBOX_DETECTION = 検出範囲
 TEXT_ID = 
 BTN_START = 開始
 MSG_INCORRECT_ID = 
+MSG_ESCAPE = 終了する場合はESCキーを押します。
 
 [SETTING]
 TITLE_CAPTION_TOUCH_ENABLE = タッチ使用の有無
