--- a/T3kCfg/Languages/korean.txt
+++ b/T3kCfg/Languages/korean.txt
@@ -149,6 +149,7 @@ TEXT_CHECKBOX_DETECTION = 검출영역
 TEXT_ID = 
 BTN_START = 시작
 MSG_INCORRECT_ID = 
+MSG_ESCAPE = 종료를 하려면 ESC를 누르세요.
 
 [SETTING]
 TITLE_CAPTION_TOUCH_ENABLE = 터치 사용 유무
