--- a/T3kCfg/Languages/chinese.txt
+++ b/T3kCfg/Languages/chinese.txt
@@ -86,8 +86,8 @@ TEXT_MIDDLE = 中間
 TEXT_DOUBLE_CLICK = 雙擊
 TEXT_CLICK = 單擊
 
-TEXT_PROFILE_LEGEND_MODE1 = Mouse
-TEXT_PROFILE_LEGEND_MODE2 = Windows 7
+TEXT_PROFILE_LEGEND_MODE1 = 鼠標
+TEXT_PROFILE_LEGEND_MODE2 = 多點觸摸
 
 [EDIT PROFILE ITEM]
 TITLE_CAPTION_EDIT_PROFILE_ITEM = 編輯項目
