--- a/T3kCfg/Languages/english.txt
+++ b/T3kCfg/Languages/english.txt
@@ -87,7 +87,7 @@ TEXT_DOUBLE_CLICK = Double Click
 TEXT_CLICK = Click
 
 TEXT_PROFILE_LEGEND_MODE1 = Mouse
-TEXT_PROFILE_LEGEND_MODE2 = Windows 7
+TEXT_PROFILE_LEGEND_MODE2 = Multi-touch
 
 [EDIT PROFILE ITEM]
 TITLE_CAPTION_EDIT_PROFILE_ITEM = Edit Action
