--- a/T3kCfg/Languages/french.txt
+++ b/T3kCfg/Languages/french.txt
@@ -87,7 +87,7 @@ TEXT_DOUBLE_CLICK = Double-clic
 TEXT_CLICK = Clic
 
 TEXT_PROFILE_LEGEND_MODE1 = Souris
-TEXT_PROFILE_LEGEND_MODE2 = Windows 7
+TEXT_PROFILE_LEGEND_MODE2 = multi-contact
 
 [EDIT PROFILE ITEM]
 TITLE_CAPTION_EDIT_PROFILE_ITEM = Éditer l'action
