--- a/T3kCfg/Languages/japanese.txt
+++ b/T3kCfg/Languages/japanese.txt
@@ -87,7 +87,7 @@ TEXT_DOUBLE_CLICK = ダブルクリック
 TEXT_CLICK = クリック
 
 TEXT_PROFILE_LEGEND_MODE1 = マウス
-TEXT_PROFILE_LEGEND_MODE2 = Windows7
+TEXT_PROFILE_LEGEND_MODE2 = 多重タッチ入力
 
 [EDIT PROFILE ITEM]
 TITLE_CAPTION_EDIT_PROFILE_ITEM = 項目編集
