--- a/T3kCfg/Languages/korean.txt
+++ b/T3kCfg/Languages/korean.txt
@@ -86,8 +86,8 @@ TEXT_MIDDLE = 중간
 TEXT_DOUBLE_CLICK = 더블클릭
 TEXT_CLICK = 클릭
 
-TEXT_PROFILE_LEGEND_MODE1 = Mouse
-TEXT_PROFILE_LEGEND_MODE2 = Windows 7
+TEXT_PROFILE_LEGEND_MODE1 = 마우스
+TEXT_PROFILE_LEGEND_MODE2 = 다중 터치 입력
 
 [EDIT PROFILE ITEM]
 TITLE_CAPTION_EDIT_PROFILE_ITEM = 항목 편집
