--- a/T3kCfg/Languages/russian.txt
+++ b/T3kCfg/Languages/russian.txt
@@ -87,7 +87,7 @@ TEXT_DOUBLE_CLICK = Двойной щелчок
 TEXT_CLICK = Щелчок
 
 TEXT_PROFILE_LEGEND_MODE1 = Мышь
-TEXT_PROFILE_LEGEND_MODE2 = Windows 7
+TEXT_PROFILE_LEGEND_MODE2 = Мультисенсор
 
 [EDIT PROFILE ITEM]
 TITLE_CAPTION_EDIT_PROFILE_ITEM = Редактирование
