--- a/T3kCfg/Languages/vietnamese.txt
+++ b/T3kCfg/Languages/vietnamese.txt
@@ -87,7 +87,7 @@ TEXT_DOUBLE_CLICK = Click đúp
 TEXT_CLICK = Click
 
 TEXT_PROFILE_LEGEND_MODE1 = Chuột
-TEXT_PROFILE_LEGEND_MODE2 = HĐH Windows 7
+TEXT_PROFILE_LEGEND_MODE2 = Cảm ứng đa điểm
 
 [EDIT PROFILE ITEM]
 TITLE_CAPTION_EDIT_PROFILE_ITEM = Hành động chỉnh sửa
