--- a/T3kCfg/Languages/arabic.txt
+++ b/T3kCfg/Languages/arabic.txt
@@ -86,8 +86,8 @@ TEXT_MIDDLE = وسط
 TEXT_DOUBLE_CLICK = نقرا مزدوجا
 TEXT_CLICK = نقر
 
-TEXT_PROFILE_LEGEND_MODE1 = Mouse
-TEXT_PROFILE_LEGEND_MODE2 = Windows 7
+TEXT_PROFILE_LEGEND_MODE1 = الماوس
+TEXT_PROFILE_LEGEND_MODE2 = إدخال بللمس المتعددة
 
 [EDIT PROFILE ITEM]
 TITLE_CAPTION_EDIT_PROFILE_ITEM = تحرير عنصر
