--- a/T3kCfg/Languages/czech.txt
+++ b/T3kCfg/Languages/czech.txt
@@ -87,7 +87,7 @@ TEXT_DOUBLE_CLICK = Dvojklik
 TEXT_CLICK = Klik
 
 TEXT_PROFILE_LEGEND_MODE1 = Myš
-TEXT_PROFILE_LEGEND_MODE2 = Windows 7
+TEXT_PROFILE_LEGEND_MODE2 = Multi-dotyk
 
 [EDIT PROFILE ITEM]
 TITLE_CAPTION_EDIT_PROFILE_ITEM = Nastavení akce
