--- a/T3kCfg/Languages/dutch.txt
+++ b/T3kCfg/Languages/dutch.txt
@@ -87,7 +87,7 @@ TEXT_DOUBLE_CLICK = Dubbelklikken
 TEXT_CLICK = Klikken
 
 TEXT_PROFILE_LEGEND_MODE1 = Muis
-TEXT_PROFILE_LEGEND_MODE2 = Windows 7
+TEXT_PROFILE_LEGEND_MODE2 = Multi touch
 
 [EDIT PROFILE ITEM]
 TITLE_CAPTION_EDIT_PROFILE_ITEM = Actie bewerken
