--- a/T3kCfg/Languages/kazakh.txt
+++ b/T3kCfg/Languages/kazakh.txt
@@ -87,7 +87,7 @@ TEXT_DOUBLE_CLICK = Екі шерту
 TEXT_CLICK = Шерту
 
 TEXT_PROFILE_LEGEND_MODE1 = Тінтуір
-TEXT_PROFILE_LEGEND_MODE2 = Windows 7
+TEXT_PROFILE_LEGEND_MODE2 = Мультисенсор
 
 [EDIT PROFILE ITEM]
 TITLE_CAPTION_EDIT_PROFILE_ITEM = Түзету
