--- a/T3kCfg/Languages/portuguese.txt
+++ b/T3kCfg/Languages/portuguese.txt
@@ -87,7 +87,7 @@ TEXT_DOUBLE_CLICK = Clique duplo
 TEXT_CLICK = Clicar
 
 TEXT_PROFILE_LEGEND_MODE1 = Mouse
-TEXT_PROFILE_LEGEND_MODE2 = Windows 7
+TEXT_PROFILE_LEGEND_MODE2 = Multi-toque
 
 [EDIT PROFILE ITEM]
 TITLE_CAPTION_EDIT_PROFILE_ITEM = Editar ações
