--- a/T3kCfg/Languages/spanish.txt
+++ b/T3kCfg/Languages/spanish.txt
@@ -86,8 +86,8 @@ TEXT_MIDDLE = Medio
 TEXT_DOUBLE_CLICK = Clic doble
 TEXT_CLICK = Clic
 
-TEXT_PROFILE_LEGEND_MODE1 = Puntero
-TEXT_PROFILE_LEGEND_MODE2 = Windows 7
+TEXT_PROFILE_LEGEND_MODE1 = Ratón
+TEXT_PROFILE_LEGEND_MODE2 = Tacto múltiple (Win 7 Only)
 
 [EDIT PROFILE ITEM]
 TITLE_CAPTION_EDIT_PROFILE_ITEM = Redacción del ítem
