--- a/T3kCfg/Languages/chineseSimplified.txt
+++ b/T3kCfg/Languages/chineseSimplified.txt
@@ -86,8 +86,8 @@ TEXT_MIDDLE = 中间
 TEXT_DOUBLE_CLICK = 双击
 TEXT_CLICK = 单击
 
-TEXT_PROFILE_LEGEND_MODE1 = 鼠标
-TEXT_PROFILE_LEGEND_MODE2 = 多点触摸
+TEXT_PROFILE_LEGEND_MODE1 = 
+TEXT_PROFILE_LEGEND_MODE2 = 
 
 [EDIT PROFILE ITEM]
 TITLE_CAPTION_EDIT_PROFILE_ITEM = 编辑项目
