--- a/T3kCfg/Languages/czech.txt
+++ b/T3kCfg/Languages/czech.txt
@@ -86,8 +86,8 @@ TEXT_MIDDLE = Prostřední
 TEXT_DOUBLE_CLICK = Dvojklik
 TEXT_CLICK = Klik
 
-TEXT_PROFILE_LEGEND_MODE1 = Myš
-TEXT_PROFILE_LEGEND_MODE2 = Multi-dotyk
+TEXT_PROFILE_LEGEND_MODE1 = 
+TEXT_PROFILE_LEGEND_MODE2 = 
 
 [EDIT PROFILE ITEM]
 TITLE_CAPTION_EDIT_PROFILE_ITEM = Nastavení akce
