--- a/T3kCfg/Languages/dutch.txt
+++ b/T3kCfg/Languages/dutch.txt
@@ -86,8 +86,8 @@ TEXT_MIDDLE = Midden
 TEXT_DOUBLE_CLICK = Dubbelklikken
 TEXT_CLICK = Klikken
 
-TEXT_PROFILE_LEGEND_MODE1 = Muis
-TEXT_PROFILE_LEGEND_MODE2 = Multi touch
+TEXT_PROFILE_LEGEND_MODE1 = 
+TEXT_PROFILE_LEGEND_MODE2 = 
 
 [EDIT PROFILE ITEM]
 TITLE_CAPTION_EDIT_PROFILE_ITEM = Actie bewerken
