--- a/T3kCfg/Languages/french.txt
+++ b/T3kCfg/Languages/french.txt
@@ -86,8 +86,8 @@ TEXT_MIDDLE = Milieu
 TEXT_DOUBLE_CLICK = Double-clic
 TEXT_CLICK = Clic
 
-TEXT_PROFILE_LEGEND_MODE1 = Souris
-TEXT_PROFILE_LEGEND_MODE2 = multi-contact
+TEXT_PROFILE_LEGEND_MODE1 = 
+TEXT_PROFILE_LEGEND_MODE2 = 
 
 [EDIT PROFILE ITEM]
 TITLE_CAPTION_EDIT_PROFILE_ITEM = Éditer l'action
