--- a/T3kCfg/Languages/german.txt
+++ b/T3kCfg/Languages/german.txt
@@ -86,8 +86,8 @@ TEXT_MIDDLE = Mitte
 TEXT_DOUBLE_CLICK = Doppelklick
 TEXT_CLICK = Klick
 
-TEXT_PROFILE_LEGEND_MODE1 = Maus
-TEXT_PROFILE_LEGEND_MODE2 = Eingabe durch Multiberührung
+TEXT_PROFILE_LEGEND_MODE1 = 
+TEXT_PROFILE_LEGEND_MODE2 = 
 
 [EDIT PROFILE ITEM]
 TITLE_CAPTION_EDIT_PROFILE_ITEM = Aktion bearbeiten
