--- a/T3kCfg/Languages/japanese.txt
+++ b/T3kCfg/Languages/japanese.txt
@@ -86,8 +86,8 @@ TEXT_MIDDLE = 中間
 TEXT_DOUBLE_CLICK = ダブルクリック
 TEXT_CLICK = クリック
 
-TEXT_PROFILE_LEGEND_MODE1 = マウス
-TEXT_PROFILE_LEGEND_MODE2 = 多重タッチ入力
+TEXT_PROFILE_LEGEND_MODE1 = 
+TEXT_PROFILE_LEGEND_MODE2 = 
 
 [EDIT PROFILE ITEM]
 TITLE_CAPTION_EDIT_PROFILE_ITEM = 項目編集
