--- a/T3kCfg/Languages/portuguese.txt
+++ b/T3kCfg/Languages/portuguese.txt
@@ -86,8 +86,8 @@ TEXT_MIDDLE = Meio
 TEXT_DOUBLE_CLICK = Clique duplo
 TEXT_CLICK = Clicar
 
-TEXT_PROFILE_LEGEND_MODE1 = Mouse
-TEXT_PROFILE_LEGEND_MODE2 = Multi-toque
+TEXT_PROFILE_LEGEND_MODE1 = 
+TEXT_PROFILE_LEGEND_MODE2 = 
 
 [EDIT PROFILE ITEM]
 TITLE_CAPTION_EDIT_PROFILE_ITEM = Editar ações
