--- a/T3kCfg/Languages/turkish.txt
+++ b/T3kCfg/Languages/turkish.txt
@@ -86,8 +86,8 @@ TEXT_MIDDLE = Orta
 TEXT_DOUBLE_CLICK = Çift Klik
 TEXT_CLICK = Klik
 
-TEXT_PROFILE_LEGEND_MODE1 = Fare
-TEXT_PROFILE_LEGEND_MODE2 = Çok Dokunuşlu (Sadece Win 7)
+TEXT_PROFILE_LEGEND_MODE1 = 
+TEXT_PROFILE_LEGEND_MODE2 = 
 
 [EDIT PROFILE ITEM]
 TITLE_CAPTION_EDIT_PROFILE_ITEM = Aksiyon ekle
