--- a/T3kCfg/Languages/vietnamese.txt
+++ b/T3kCfg/Languages/vietnamese.txt
@@ -86,8 +86,8 @@ TEXT_MIDDLE = Ở giữa
 TEXT_DOUBLE_CLICK = Click đúp
 TEXT_CLICK = Click
 
-TEXT_PROFILE_LEGEND_MODE1 = Chuột
-TEXT_PROFILE_LEGEND_MODE2 = Cảm ứng đa điểm
+TEXT_PROFILE_LEGEND_MODE1 = 
+TEXT_PROFILE_LEGEND_MODE2 = 
 
 [EDIT PROFILE ITEM]
 TITLE_CAPTION_EDIT_PROFILE_ITEM = Hành động chỉnh sửa
