--- a/T3kCfg/Languages/kazakh.txt
+++ b/T3kCfg/Languages/kazakh.txt
@@ -86,8 +86,8 @@ TEXT_MIDDLE = Орта
 TEXT_DOUBLE_CLICK = Екі шерту
 TEXT_CLICK = Шерту
 
-TEXT_PROFILE_LEGEND_MODE1 = Тінтуір
-TEXT_PROFILE_LEGEND_MODE2 = Мультисенсор
+TEXT_PROFILE_LEGEND_MODE1 = 
+TEXT_PROFILE_LEGEND_MODE2 = 
 
 [EDIT PROFILE ITEM]
 TITLE_CAPTION_EDIT_PROFILE_ITEM = Түзету
