--- a/T3kCfg/Languages/russian.txt
+++ b/T3kCfg/Languages/russian.txt
@@ -86,8 +86,8 @@ TEXT_MIDDLE = Центр
 TEXT_DOUBLE_CLICK = Двойной щелчок
 TEXT_CLICK = Щелчок
 
-TEXT_PROFILE_LEGEND_MODE1 = Мышь
-TEXT_PROFILE_LEGEND_MODE2 = Мультисенсор
+TEXT_PROFILE_LEGEND_MODE1 = 
+TEXT_PROFILE_LEGEND_MODE2 = 
 
 [EDIT PROFILE ITEM]
 TITLE_CAPTION_EDIT_PROFILE_ITEM = Редактирование
