--- a/T3kCfgFE/Languages/english.txt
+++ b/T3kCfgFE/Languages/english.txt
@@ -48,8 +48,8 @@ TITLE_CAPTION_LICENSE = License
 [MESSAGEBOX]
 BTN_CAPTION_OK = OK
 BTN_CAPTION_CANCEL = Cancel
-BTN_CAPTION_YES = Yes
-BTN_CAPTION_NO = No
+BTN_CAPTION_YES = Yes(Y)
+BTN_CAPTION_NO = No(N)
 
 [SELECT SENSOR DATA DIALOG]
 
