--- a/T3kCfgFE/Languages/korean.txt
+++ b/T3kCfgFE/Languages/korean.txt
@@ -48,8 +48,8 @@ TITLE_CAPTION_LICENSE = 라이센스
 [MESSAGEBOX]
 BTN_CAPTION_OK = 확인
 BTN_CAPTION_CANCEL = 취소
-BTN_CAPTION_YES = 예
-BTN_CAPTION_NO = 아니오
+BTN_CAPTION_YES = 예(Y)
+BTN_CAPTION_NO = 아니오(N)
 
 [SELECT SENSOR DATA DIALOG]
 
